# pslab-mini-firmware

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: code-checks.yml  main-builder.yml  unit-tests.yml
STM32_essential_drivers/STM32Cube_FW_H5_V1.5.0/Drivers/STM32H5xx_HAL_Driver/: Release_Notes.html
UART3_Test_Template/: .cproject  .project  STM32H563ZITX_FLASH.ld  STM32H563ZITX_RAM.ld
UART3_Test_Template/Debug/: UART3_Test_Template.elf  UART3_Test_Template.list  UART3_Test_Template.map  makefile  objects.list
UART3_Test_Template/Debug/Src/: main.cyclo  main.d  main.su  subdir.mk  uart.cyclo  uart.d  uart.su
UART3_Test_Template/Debug/Startup/: subdir.mk
UART3_Test_Template/Inc/: uart.h
UART3_Test_Template/Src/: main.c  uart.c
UART3_Test_Template/Startup/: startup_stm32h563zitx.s
boot/: .gitignore  CMakeLists.txt  README.md  STM32H563RITX_FLASH.ld  STM32H563ZITX_FLASH.ld  blt_conf.h  boot.dox  hooks.c  led.c  main.c  makefile  shared_params.c  shared_params.h  stm32h5xx_hal_conf.h
boot/lib/: CMakeLists.txt  stm32h5xx_hal_conf.h
boot/lib/TinyUSB/: CMakeLists.txt
boot/lib/TinyUSB/cfg/: CMakeLists.txt  usb_descriptors.c
boot/lib/TinyUSB/port/st/stm32h5/: CMakeLists.txt
boot/lib/TinyUSB/src/: CMakeLists.txt
boot/lib/TinyUSB/src/class/: CMakeLists.txt
boot/lib/TinyUSB/src/class/hid/: CMakeLists.txt
boot/lib/TinyUSB/src/common/: CMakeLists.txt
boot/lib/TinyUSB/src/device/: CMakeLists.txt
boot/lib/TinyUSB/src/osal/: CMakeLists.txt
boot/lib/uip/: netdev.c  netdev.h  uip-conf.h
boot/openblt/: CMakeLists.txt  boot.h  file.c  mb.c  plausibility.h
boot/openblt/ARMCM33_STM32H5/: CMakeLists.txt  flash.c
boot/openblt/ARMCM33_STM32H5/GCC/: CMakeLists.txt
cmake/: pslab-common.cmake  target.cmake  tests.cmake
doc/: build_system_guide.md  bus_architecture_design.md  error_handling.md  platform_logging_example.c  programming_manual.md  testing_guide.md  uart_architecture_design.md
lib/: CException  CMakeLists.target.txt  CMakeLists.tests.txt  CMakeLists.txt  scpi  tinyusb
lib/CException-1.3.4/: CExceptionConfig.h  CMakeLists.txt
lib/STM32H5_CMSIS_HAL-1.5.0/: package.xml
lib/TinyUSB/: CMakeLists.txt  stm32h5xx_hal_conf.h
lib/TinyUSB/cfg/: CMakeLists.txt
lib/TinyUSB/port/st/: CMakeLists.txt
lib/TinyUSB/port/st/stm32h5/: CMakeLists.txt
lib/TinyUSB/src/: CMakeLists.txt
lib/TinyUSB/src/class/hid/: CMakeLists.txt
lib/TinyUSB/src/common/: CMakeLists.txt
lib/TinyUSB/src/device/: CMakeLists.txt
lib/TinyUSB/src/osal/: CMakeLists.txt
lib/scpi-parser-2.3/: CMakeLists.txt
lib/tinyusb-0.18.0/: CMakeLists.txt
lib/tinyusb-0.18.0/src/: CMakeLists.txt  tusb_config.h
lib/tinyusb-0.18.0/src/class/: CMakeLists.txt
lib/tinyusb-0.18.0/src/class/cdc/: CMakeLists.txt
lib/tinyusb-0.18.0/src/common/: CMakeLists.txt
lib/tinyusb-0.18.0/src/device/: CMakeLists.txt
lib/tinyusb-0.18.0/src/portable/: CMakeLists.txt
lib/tinyusb-0.18.0/src/portable/st/: CMakeLists.txt
lib/tinyusb-0.18.0/src/portable/st/stm32_fsdev/: CMakeLists.txt
lib/tinyusb-0.18.0/src/portable/st/typec/: CMakeLists.txt
lib/tinyusb-0.18.0/src/typec/: CMakeLists.txt
src/: .clang-format  .clang-tidy  CMakeLists.target.txt  CMakeLists.tests.txt  CMakeLists.txt  STM32H563ZITX_FLASH.ld  header.h  led.c  led.h  main.c  stm32h5xx_hal_conf.h  timer.c  timer.h  uart.c  uart.h
src/application/: CMakeLists.target.txt  CMakeLists.tests.txt  CMakeLists.txt  README.md  main.c  protocol.c  protocol.h  protocol_example.c
src/application/protocol/: common.c  dmm.c  dso.c
src/platform/: CMakeLists.txt  README.md  adc_ll.h  esp_ll.h  led_ll.h  logging_ll.c  logging_ll.h  platform.h  platform_logging.c  platform_logging.h  spi_ll.h  tim_ll.h  uart_ll.h  usb_ll.h
src/platform/h563xx/: CMakeLists.txt  STM32H563RITX_FLASH.ld  adc_ll.c  esp_ll.c  led_ll.c  platform.c  spi_ll.c  stm32h5xx_hal_conf.h  system_stm32h5xx.c  tim_ll.c  uart_ll.c  usb_descriptors.c  usb_ll.c
src/platform/mock/: CMakeLists.txt  mock_uart_ll.c  mock_uart_ll.h
src/system/: CMakeLists.target.txt  CMakeLists.tests.txt  CMakeLists.txt  README.md  esp.c  esp.h  led.c  led.h  logging.c  logging.h  stubs.c  syscalls.c  syscalls_config.h  system.c  system.h
src/system/adc/: CMakeLists.target.txt  CMakeLists.tests.txt  CMakeLists.txt  adc.c  adc.h
src/system/bus/: CMakeLists.target.txt  CMakeLists.tests.txt  CMakeLists.txt  bus.c  bus.h  bus_common.c  bus_common.h  spi.c  spi.h  uart.c  uart.h  usb.c  usb.h
src/system/bus/uart/: CMakeLists.txt  uart.c  uart.h  uart_internal.h
src/system/bus/usb/: CMakeLists.txt  usb.c  usb.h  usb_descriptors.c  usb_internal.h
src/system/h563xx/: CMakeLists.txt  STM32H563ZITX_FLASH.ld  stm32h5xx_hal_conf.h  system_stm32h5xx.c  uart.c  usb.c
src/system/instrument/: CMakeLists.target.txt  CMakeLists.tests.txt  CMakeLists.txt  dmm.c  dmm.h  dso.c  dso.h
src/system/timer/: CMakeLists.target.txt  CMakeLists.tests.txt  CMakeLists.txt  tim.c  tim.h
src/util/: CExceptionConfig.h  CMakeLists.txt  circular_buffer.c  error.h  exception.c  exception.h  fixed_point.c  fixed_point.h  linear_buffer.c  linear_buffer.h  logging.c  logging.h  si_prefix.h  util.h
src/util/CExceptionConfig/: CExceptionConfig.h
tests/: .gitignore  CMakeLists.txt  config.yml  create_test.cmake  test_circular_buffer.c  test_dmm.c  test_fixed_point.c  test_logging.c  test_protocol.c  test_protocol_common.c  test_protocol_dmm.c  test_protocol_dso.c  test_syscalls.c  test_uart.c
tests/mocks/: mock_uart_ll.c  mock_uart_ll.h
tests/runners/: test_uart_runner.c
tests/test_headers/: errno.h  exception_test.c  opaque.h  reent-stub.c  reent.h  unistd.h
tests/test_helpers/: scpi_test_helpers.c  scpi_test_helpers.h
